hphp/hack/test/typecheck/null_coalesce_assignment/null_coalesce_assignment.php.exp
File "null_coalesce_assignment.php", line 26, characters 10-11:
Invalid return type (Typing[4110])
File "null_coalesce_assignment.php", line 22, characters 23-25:
This is an int
File "null_coalesce_assignment.php", line 25, characters 10-24:
It is incompatible with an object of type vec
